--- a/app/views/advert_mailer/ilanekleme.html.erb
+++ b/app/views/advert_mailer/ilanekleme.html.erb
@@ -9,15 +9,15 @@
 
 <body >
 	
-	<img src="http://144.122.148.221:3000/resources/images/logo.png"  >
+	<img src="http://www.campusilan.com/resources/images/logo.png"  >
 	
-	<p>	Campus İlan'a ilanınızı hiçbir sorun olmadan eklediniz.Geriye sadece onaylanması kaldı :) </p>
+	<p>	Campus İlan'a ilanınızı hiçbir sorun olmadan eklediniz. Geriye sadece onaylanması kaldı :) </p>
 <p>İlanınız en kısa sürede yayınlanacaktır. Ekibimiz en uygun ve legal ilanların yayınlanması için büyük bir özenle çalışmaktadır.  </p> 
 
 	
 	
-	<p>Bu süreçte size yaşattığımız gecikme için özür dileriz.İlanınız onaylanma sürecinde iken diğer ilanlara göz atabilir ve sitemizim tadını çıkarabilirsiniz :)</p>
-<a href="<%= @user.href %>"> Profilime Git</a> <br><br>
+	<p>Bu süreçte size yaşattığımız gecikme için özür dileriz. İlanınız onaylanma sürecinde iken diğer ilanlara göz atabilir ve sitemizim tadını çıkarabilirsiniz :)</p>
+	<br><br>
 
 
 <p>Bizi tercih ettiğiniz için teşekkür ederiz. </p>
