--- a/app/views/index/iletisim.html.erb
+++ b/app/views/index/iletisim.html.erb
@@ -106,7 +106,7 @@
 			}
 			
 		</style>
-
+		<script src='https://www.google.com/recaptcha/api.js?hl=tr'></script>
 	</head>
 
 	<body>
@@ -160,44 +160,44 @@
 					
 					<div class="col-md-8">
 						
-							<form>
+							<%= form_tag("/iletisim", method: "post") do %>
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
 											<label for="name"> Ad-Soyad </label>
-											<input type="text" class="form-control" id="name" placeholder="Ad-Soyad Giriniz" required="required" />
+											<%= text_field_tag :name, nil, :id => 'name', :class => 'form-control' ,
+											 		:placeholder => 'Ad-Soyad Giriniz', :required => 'required' %>
 										</div>
 										<div class="form-group">
 											<label for="email"> E-posta Adresi </label>
 											<div class="input-group">
 												<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span> </span>
-												<input type="email" class="form-control" id="email" placeholder="E-posta adresinizi giriniz" required="required" />
+												<%= text_field_tag :email, nil, :type => 'email', :id => 'email', :class => 'form-control' ,
+											 		:placeholder => 'E-posta adresinizi giriniz', :required => 'required' %>
 											</div>
 										</div>
 										<div class="form-group">
 											<label for="subject"> Konu nedir? </label>
-											<select id="subject" name="subject" class="form-control" required="required">
-												<option value="na" selected="">Konuyu Seçiniz:</option>
-												<option value="service">Genel</option>
-												<option value="suggestions">Öneriler</option>
-												<option value="product">Bug-Hata Raporları</option>
-											</select>
+											<%= select_tag :subject, options_for_select([['Genel', 'genel'], ['Öneriler', 'oneriler'], ['Bug-Hata Raporları', 'bug']]), 
+												:class => "form-control", :required => 'required'  %>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group">
-											<label for="name"> Mesajınız </label>
-											<textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Mesajınızı buraya giriniz"></textarea>
+											<label for="message"> Mesajınız </label>
+											<%= text_area_tag :message, nil, :name => 'message', :id => 'messsage', :class => 'form-control',
+												:rows => '9', :cols => '25', :required => 'required', :placeholder => "Mesajınızı buraya giriniz"%>
 										</div>
 									</div>
-									<div class="col-md-12">
-										<button type="submit" class="btn btn-primary pull-right" id="btnContactUs">
-											Mesajı Gönder
-										</button>
-									</div>
 								</div>
-							</form>
+								<div class="row">
+									<div class="g-recaptcha col-md-6 col-xs-12" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+									
+									<button type="submit" class="btn btn-primary col-md-6 col-xs-12" id="btnContactUs">
+										Mesajı Gönder
+									</button>
+								</div>
+							<% end %>
 						
 					</div>
 					<div class="col-md-4">
@@ -212,7 +212,7 @@
 								<br>
 								Öğrenci Konukevi 2 (Ebi 1) Çankaya,Ankara
 								<br><br>
-								E-posta: <a href="mailto:iletisim@campusilan.com">iletisim@campusilan.com</a>
+								E-posta: <a href="mailto:info@campusilan.com">info@campusilan.com</a>
 								
 							</address>
 							
