--- a/app/views/application/_ilanbenzer.html.erb
+++ b/app/views/application/_ilanbenzer.html.erb
@@ -10,7 +10,7 @@
 
 	<% @similar.each do |advert| %>
 
-	<div class="hidden-xs hidden-sm col-md-4 col-md3">
+	<div class="visible-lg hidden-sm col-md-4 col-md3">
 		<div class="col-md1 simpleCart_shelfItem">
 
 			<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small), :class => 'img-responsive masterTooltip',title: advert.name %> </a>
@@ -27,6 +27,26 @@
 			</div>
 		</div>
 	</div>
+	
+	
+	<div class="visible-md hidden-sm col-md-4 col-md3">
+		<div class="col-md1 simpleCart_shelfItem">
+
+			<a href="<%= advert.href %>"> <%= image_tag advert.pimage.imagefile(:small), :class => 'img-responsive masterTooltip',title: advert.name %> </a>
+
+			<% if advert.name.size >= 11 %>
+			<h3><a href="<%= advert.href %>"> <%= advert.name[0..10] %>... </a></h3>
+			<% else %>
+			<h3><a href="<%= advert.href %>"> <%= advert.name %> </a></h3>
+			<% end %>
+			<div class="price">
+				<h5 class="item_price"><%= advert.price %>&#8378;</h5>
+				<a href="<%= advert.href %>" class="item_add">İncele</a>
+				<div class="clearfix"></div>
+			</div>
+		</div>
+	</div>
+	
 
 	<div class=" visible-xs visible-sm col-md-4 col-md3">
 		<div class="col-md1 simpleCart_shelfItem">
