--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -119,7 +119,7 @@
 	</div>
 </div>
 
-<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+<div id="recaptcha1"></div>
 <br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
