--- a/app/views/application/_ozeldersform.html.erb
+++ b/app/views/application/_ozeldersform.html.erb
@@ -87,7 +87,7 @@
 	<label class = "col-sm-2 control-label">Dersi Nerede Verecek?</label>
 
 	<div class = "col-sm-10">
-		<%= field.select :location, [['Öğrenci Evinde', 'ogrencievi'], ['Öğretmenin Evinde', 'ogretmenevi'], ['Sınıfta', 'sinifta']],{}, {class:"form-control"}  %>
+		<%= field.select :location, [['Öğrenci Evinde', 'ogrencievi'], ['Öğretmenin Evinde', 'ogretmenevi'], ['Sınıfta', 'sinifta'], ['Fark etmez', 'farketmez']],{}, {class:"form-control"}  %>
 	</div>
 </div>
 
@@ -119,7 +119,7 @@
 	</div>
 </div>
 
-<div class="g-recaptcha" data-sitekey="6Ld3uhYTAAAAAICn8yQ17ES81jCf7J4Dpz0yUgkf"></div>
+<div id="recaptcha3"></div>
 <br>
 <div class = "row form-group">
 	<div class = " col-sm-10">
@@ -185,10 +185,14 @@
 
 <% end %>
 <div class = "row form-group">
-	<div class = "col-sm-offset-2 col-sm-10">
+	<div class = "col-sm-offset-2 col-sm-5">
 		<%= t.submit 'İlanı Güncelle',class:"btn btn-default" %>
 	</div>
+	<div class = "col-sm-5">
+		<button type="button" class="btn btn-danger" onclick="ilankapat(<%= @advert.id %>);">İlanı Kapat</button>
+	</div>
 </div>
+
 <%end%>
 
 <% end %>
