--- a/app/views/application/_ikincielform.html.erb
+++ b/app/views/application/_ikincielform.html.erb
@@ -292,7 +292,7 @@ var brand = form.elements['advert_<%= advertable %>_brand'].value;
 
 <% if local[:mode] == 0 %>
 	var kullanim = $("#ikincielform #kullanim").is(":checked");
-	return ilanadi && fiyat && marka && aciklama && kullanim && grecaptcha.getResponse()!="";
+	return ilanadi && fiyat && marka && aciklama && kullanim && grecaptcha.getResponse(recaptcha1)!="";
 <% elsif local[:mode] == 1 %>
 	return ilanadi && fiyat && marka && aciklama;
 <% end %>}</script>
